Fix run input z-index with cookie wall

--- a/src/dgenies/static/css/dgenies.css
+++ b/src/dgenies/static/css/dgenies.css
@@ -844,3 +844,7 @@ ul.nav ul.dropdown-menu {
     overflow-y: auto;
 
 }
+
+.blocker {
+    z-index: 11;
+}
